force-app/main/default/objects/NI_Documentation__c/NI_Documentation__c.object-meta.xml
<CustomObject>
    <label>NI Documentation</label>
    <nameField>
        <displayFormat>DOC-{00000}</displayFormat>
        <label>Doc #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NI Documentation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>