force-app/main/default/objects/NI_Documentation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-007494</description>
    <inlineHelpText>Related Account record</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>NI Documentation</relationshipLabel>
    <relationshipName>NI_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>