force-app/main/default/objects/NI_Documentation__c/fields/Account_Production_Configured__c.field-meta.xml
<CustomField>
    <fullName>Account_Production_Configured__c</fullName>
    <description>Salesforce.com Change Request: NICC-007494</description>
    <label>Account Production Configured</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>