force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_End_of_Migration_Validation_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_End_of_Migration_Validation_Date__c</fullName>
    <description>Send migration reminder email before 2 Business days of migration date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Send migration reminder email before 2 Business days of migration date</inlineHelpText>
    <label>End of Migration Validation Date</label>
    <type>Date</type>
</CustomField>