force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_HSP_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_HSP_Expiration_Date__c</fullName>
    <description>hSP Expiration Date</description>
    <formula>AH_PLCM_Migration_Date__c + 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>hSP Expiration Date</inlineHelpText>
    <label>hSP Expiration Date</label>
    <type>Date</type>
</CustomField>