force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Is_User_XRef_Bubble_Help_Skipped__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Is_User_XRef_Bubble_Help_Skipped__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103</description>
    <inlineHelpText>Is the User Cross-Reference (Transfer Activities) bubble help text skipped by user?</inlineHelpText>
    <label>User XRef Bubble Help Skipped</label>
    <type>Checkbox</type>
</CustomField>