force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_IsOpt_Out_of_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_IsOpt_Out_of_Social_Media__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103 - Field Label was renamed due to a change in PLCM Transformer Terms &amp; Conditions language. The customer will Opt In = True with checkbox checked, NOT Opt Out = True, even though this is contrary to the field API Name.</description>
    <inlineHelpText>Flag for customer participating In Social Media (Chatter) usage or not.</inlineHelpText>
    <label>Opt Into Social Media</label>
    <type>Checkbox</type>
</CustomField>