force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_IsTerms_and_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_IsTerms_and_Conditions_Accepted__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>NICC-036103</description>
    <inlineHelpText>Flag for Terms and Conditions acceptance by customer</inlineHelpText>
    <label>Terms and Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>