force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Migration_Date__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Scheduled migration date</inlineHelpText>
    <label>Migration Date</label>
    <type>Date</type>
</CustomField>