force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Migration_Reminder_2_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Migration_Reminder_2_Date__c</fullName>
    <businessOwnerUser>dkey@newmarketinc.com.sbfull</businessOwnerUser>
    <description>For PLCM, represents 1 Business day before the migration/upgrade date in the “Migration Date” field. Calculated via a trigger.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For PLCM, represents 1 Business day before the migration/upgrade date in the “Migration Date” field. Calculated via a trigger.</inlineHelpText>
    <label>Migration Reminder 2 Date</label>
    <type>Date</type>
</CustomField>