force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Migration_Reminder_3_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Migration_Reminder_3_Date__c</fullName>
    <description>Send migration reminder email before 1 Business day of migration date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Send migration reminder email before 1 Business day of migration date</inlineHelpText>
    <label>Migration Reminder 3 Date</label>
    <type>Date</type>
</CustomField>