force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Migration_Type__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Migration_Type__c</fullName>
    <description>Field is being used by PLCM team</description>
    <inlineHelpText>Migration Type - ACA or Full</inlineHelpText>
    <label>Migration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACA</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>