force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MigrationProgress__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MigrationProgress__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <inlineHelpText>Status of the migration progress.</inlineHelpText>
    <label>Migration Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Project Created</fullName>
                <default>true</default>
                <label>Project Created</label>
            </value>
            <value>
                <fullName>Customer Inputs Pending</fullName>
            </value>
            <value>
                <fullName>Customer Inputs Complete</fullName>
            </value>
            <value>
                <fullName>Migration Date Confirmed</fullName>
            </value>
            <value>
                <fullName>Migration In Progress</fullName>
            </value>
            <value>
                <fullName>Migration Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>