force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Code__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Code__c</fullName>
    <formula>Account__r.MMI_MM_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MM Code</label>
    <type>Text</type>
</CustomField>