force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Floor_Boxes__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Floor_Boxes__c</fullName>
    <description>Total number of Floor Boxes</description>
    <inlineHelpText>How many total Floor Boxes do I have?</inlineHelpText>
    <label>Floor Boxes</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>