force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Is_Room_Capacity_Bubble_Skip__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Is_Room_Capacity_Bubble_Skip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MM conversion Customer skipped Room Capacity bubble help tutorial.</description>
    <inlineHelpText>MM conversion Customer skipped Room Capacity bubble help tutorial.</inlineHelpText>
    <label>Room Capacity Bubble Help Skipped</label>
    <type>Checkbox</type>
</CustomField>