force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Outlets__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Outlets__c</fullName>
    <description>Total Number of Outlets</description>
    <inlineHelpText>How many total Outlets do I have?</inlineHelpText>
    <label>Outlets</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>