force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Total_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Total_Square_Footage__c</fullName>
    <description>Amount of square footage (area) purchased for the Conversion.</description>
    <inlineHelpText>How much square footage did I purchase for conversion?</inlineHelpText>
    <label>Total Square Footage Purchased</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-5000</fullName>
                <label>0-5,000</label>
            </value>
            <value>
                <fullName>5001-10000</fullName>
                <label>5,001-10,000</label>
            </value>
            <value>
                <fullName>10001-25000</fullName>
                <label>10,001-25,000</label>
            </value>
            <value>
                <fullName>25001-5000</fullName>
                <label>25,001-50,000</label>
            </value>
            <value>
                <fullName>50001-75000</fullName>
                <label>50,001-75,000</label>
            </value>
            <value>
                <fullName>&gt;75000</fullName>
                <label>&gt;75,000</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>