force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_MM_Total_Stations__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_MM_Total_Stations__c</fullName>
    <description>Number of Total Stations</description>
    <inlineHelpText>How many total Stations do I have?</inlineHelpText>
    <label>Total Stations</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>