force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Portal_Completion_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Portal_Completion_Due_Date__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the customer is required to complete all of the Customer Portal input requirements.</inlineHelpText>
    <label>Portal Completion Due Date</label>
    <type>Date</type>
</CustomField>