force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Portal_Progress__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Portal_Progress__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <inlineHelpText>Status of Migration Portal customer steps</inlineHelpText>
    <label>Portal Progress</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal Invitation Sent</fullName>
                <default>true</default>
                <label>Portal Invitation Sent</label>
            </value>
            <value>
                <fullName>Property Information Confirmed</fullName>
            </value>
            <value>
                <fullName>Property Details Complete</fullName>
            </value>
            <value>
                <fullName>Migration Users Complete</fullName>
            </value>
            <value>
                <fullName>Cross-Reference Complete</fullName>
            </value>
            <value>
                <fullName>Function Room Information Provided</fullName>
            </value>
            <value>
                <fullName>Room Capacity Information Provided</fullName>
            </value>
            <value>
                <fullName>Inventory Information Provided</fullName>
            </value>
            <value>
                <fullName>Customer Inputs Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>