force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Proposed_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Proposed_Migration_Date__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Proposed Migration Date for customer</inlineHelpText>
    <label>Proposed Migration Date</label>
    <type>Date</type>
</CustomField>