force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Tech_Transfer__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Tech_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field is being used by PLCM team</description>
    <inlineHelpText>If checked then email will trigger based on filters criteria</inlineHelpText>
    <label>Tech Transfer</label>
    <type>Checkbox</type>
</CustomField>