force-app/main/default/objects/NI_Documentation__c/fields/AH_PLCM_Terms_and_Cndtions_Accepted_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_PLCM_Terms_and_Cndtions_Accepted_Date__c</fullName>
    <businessOwnerGroup>DEPT_Platform_Life_Cycle_Management</businessOwnerGroup>
    <description>NICC-036103</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date Terms and Conditions were accepted by customer</inlineHelpText>
    <label>Terms and Conditions Accepted Date</label>
    <type>Date</type>
</CustomField>