force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_ChatterWorkbookAccessed__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_ChatterWorkbookAccessed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this field to opt into receiving chatter notifications when a user accesses a workbook for the first time</description>
    <inlineHelpText>Use this field to opt into receiving chatter notifications when a user accesses a workbook for the first time</inlineHelpText>
    <label>UDC Workbook Accessed</label>
    <type>Checkbox</type>
</CustomField>