force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_CustomerNotificationOptIn__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_CustomerNotificationOptIn__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If the customer does not want to receive an email reminder 7 days before the workbook due date, uncheck this box.</description>
    <inlineHelpText>If the customer does not want to receive an email reminder 7 days before the workbook due date, uncheck this box.</inlineHelpText>
    <label>UDC Customer Notification Opt In</label>
    <type>Checkbox</type>
</CustomField>