force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_OptIntoSocialMedia__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_OptIntoSocialMedia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for when a user is on the Terms &amp; Conditions page in UDC to opt into social media.  This field will be updated to checked when the community user accepts.</description>
    <inlineHelpText>Created for when a user is on the Terms &amp; Conditions page in UDC to opt into social media.  This field will be updated to checked when the community user accepts.</inlineHelpText>
    <label>Opt Into Social Media</label>
    <type>Checkbox</type>
</CustomField>