force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_PropertyAccount__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_PropertyAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Property Account record that will be updated by the form inputs.</description>
    <inlineHelpText>This is the Property Account record that will be updated by the form inputs.</inlineHelpText>
    <label>UDC Property Account</label>
    <referenceTo>AH_UDC_PropertyAccount__c</referenceTo>
    <relationshipLabel>NI Documentation</relationshipLabel>
    <relationshipName>NI_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>