force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_PropertyConfirmation__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_PropertyConfirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to be updated when a community user confirms the property information is correct</description>
    <inlineHelpText>Field to be updated when a community user confirms the property information is correct</inlineHelpText>
    <label>Property Confirmation</label>
    <type>Checkbox</type>
</CustomField>