force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_PropertyConfirmationAccepted_Date__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_PropertyConfirmationAccepted_Date__c</fullName>
    <description>Field to be updated to the date that the property information was confirmed</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field to be updated to the date that the property information was confirmed</inlineHelpText>
    <label>Property Confirmation Accepted Date</label>
    <type>DateTime</type>
</CustomField>