force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_WorkbookDueDate__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_WorkbookDueDate__c</fullName>
    <description>Date the workbook should be completed and submitted</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date the workbook should be completed and submitted</inlineHelpText>
    <label>UDC Workbook Due Date</label>
    <type>Date</type>
</CustomField>