force-app/main/default/objects/NI_Documentation__c/fields/AH_UDC_WorkbookLocked__c.field-meta.xml
<CustomField>
    <fullName>AH_UDC_WorkbookLocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be used when the workbook is completed and verified so that the workbook is no longer available to the community user to update.</description>
    <inlineHelpText>To be used when the workbook is completed and verified so that the workbook is no longer available to the community user to update.</inlineHelpText>
    <label>UDC Workbook Locked</label>
    <type>Checkbox</type>
</CustomField>