force-app/main/default/objects/NI_Documentation__c/fields/BE4_URL__c.field-meta.xml
<CustomField>
    <fullName>BE4_URL__c</fullName>
    <businessOwnerUser>shuebner@newmarketinc.com</businessOwnerUser>
    <description>NICC-062947</description>
    <encryptionScheme>None</encryptionScheme>
    <label>BE4 URL</label>
    <type>Url</type>
</CustomField>