force-app/main/default/objects/NI_Documentation__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the point contact for questions regarding the configuration.</inlineHelpText>
    <label>Main Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>NI Documentation (Main Contact)</relationshipLabel>
    <relationshipName>NI_Documentation1</relationshipName>
    <type>Lookup</type>
</CustomField>