force-app/main/default/objects/NI_Documentation__c/fields/ContactNameForEmails__c.field-meta.xml
<CustomField>
    <fullName>ContactNameForEmails__c</fullName>
    <businessOwnerUser>kcontreraz@newmarketinc.com</businessOwnerUser>
    <description>NICC-061820</description>
    <formula>AH_PLCM_Project_Contact__r.FirstName &amp; &quot; &quot; &amp; AH_PLCM_Project_Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in email templates to address emails to the Project Contact for PLCM</inlineHelpText>
    <label>Contact Name for Emails</label>
    <type>Text</type>
</CustomField>