force-app/main/default/objects/NI_Documentation__c/fields/Days_Until_Migration_Date__c.field-meta.xml
<CustomField>
    <fullName>Days_Until_Migration_Date__c</fullName>
    <formula>AH_PLCM_Migration_Date__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for troubleshooting issues with the BE4 upgrade email Flow</inlineHelpText>
    <label>Days Until Migration Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>