force-app/main/default/objects/NI_Documentation__c/fields/Document_Name__c.field-meta.xml
<CustomField>
    <fullName>Document_Name__c</fullName>
    <defaultValue>IF($RecordType.DeveloperName = &quot;HRM_Configuration&quot;, &quot;HRM Configuration&quot;, &quot;&quot;)</defaultValue>
    <description>Name of the Document</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Document</inlineHelpText>
    <label>Document Name</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>