force-app/main/default/objects/NI_Documentation__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agenda</fullName>
            </value>
            <value>
                <fullName>BEO/Banquet Check</fullName>
            </value>
            <value>
                <fullName>Budgetary Guidelines</fullName>
            </value>
            <value>
                <fullName>Canada Letter</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>Communication Plan</fullName>
            </value>
            <value>
                <fullName>Configuration Requirements</fullName>
            </value>
            <value>
                <fullName>Confirmation Letter</fullName>
            </value>
            <value>
                <fullName>Corporate Standards</fullName>
            </value>
            <value>
                <fullName>Custom Report/Export</fullName>
            </value>
            <value>
                <fullName>Custom Reports</fullName>
            </value>
            <value>
                <fullName>Data Migration Cross-reference Requirements</fullName>
            </value>
            <value>
                <fullName>Data Migration Data Analysis Report</fullName>
            </value>
            <value>
                <fullName>Data Migration Validation Report</fullName>
            </value>
            <value>
                <fullName>Data Migration Workbook</fullName>
            </value>
            <value>
                <fullName>Delphi.fdc Merge Document</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>Room Diagrams</fullName>
                <label>Diagramming Materials</label>
            </value>
            <value>
                <fullName>Document of Understanding</fullName>
            </value>
            <value>
                <fullName>Implementation Plan</fullName>
            </value>
            <value>
                <fullName>New Installation Workbook</fullName>
            </value>
            <value>
                <fullName>Preparation Call</fullName>
            </value>
            <value>
                <fullName>Project Plan</fullName>
            </value>
            <value>
                <fullName>Property Logo</fullName>
            </value>
            <value>
                <fullName>Proposal</fullName>
            </value>
            <value>
                <fullName>PSIE Documentation</fullName>
            </value>
            <value>
                <fullName>Quick Start Configuration Requirements</fullName>
            </value>
            <value>
                <fullName>Recap</fullName>
            </value>
            <value>
                <fullName>Reporting Plan</fullName>
            </value>
            <value>
                <fullName>Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>