force-app/main/default/objects/NI_Documentation__c/fields/DRC_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>DRC_Call_Date__c</fullName>
    <description>DRC Call Date for Project Coordinator</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>DRC Call Date for Project Coordinator</inlineHelpText>
    <label>DRC Call Date</label>
    <type>Date</type>
</CustomField>