force-app/main/default/objects/NI_Documentation__c/fields/Estimated_Configuration_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Configuration_Time__c</fullName>
    <description>Based on details on the HRM configurations, this is the estimated total time to complete configuration</description>
    <inlineHelpText>Based on details on the HRM configurations, this is the estimated total time to complete configuration</inlineHelpText>
    <label>Estimated Configuration Time</label>
    <summarizedField>HRM_Requirement__c.Time_to_Complete_Requirement__c</summarizedField>
    <summaryForeignKey>HRM_Requirement__c.HRM_Configuration_Document__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>