force-app/main/default/objects/NI_Documentation__c/fields/Final_Approver__c.field-meta.xml
<CustomField>
    <fullName>Final_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Final Approver if this record requires approval</description>
    <inlineHelpText>Final Approver if this record requires approval</inlineHelpText>
    <label>Final Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NI_Related_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>