force-app/main/default/objects/NI_Documentation__c/fields/Final_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Final_Target_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-007452

Select target date for final document</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Select target date for final document</inlineHelpText>
    <label>Final Target Date</label>
    <type>Date</type>
</CustomField>