force-app/main/default/objects/NI_Documentation__c/fields/First_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Target_Date__c</fullName>
    <description>Salesforce.com Change Request: NICC-007452

Enter the first target due date</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the first target due date</inlineHelpText>
    <label>First Target Date</label>
    <type>Date</type>
</CustomField>