force-app/main/default/objects/NI_Documentation__c/fields/Follow_Up_Required__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Salesforce.com Change Request: NICC-007494

Follow-up is needed for outstanding issues</description>
    <inlineHelpText>Select if follow-up is needed for outstanding issues</inlineHelpText>
    <label>Follow-Up Required</label>
    <type>Checkbox</type>
</CustomField>