force-app/main/default/objects/NI_Documentation__c/fields/HRM_Product__c.field-meta.xml
<CustomField>
    <fullName>HRM_Product__c</fullName>
    <description>Denotes which product the HRM Solution is for</description>
    <inlineHelpText>Select the product the solution is related to</inlineHelpText>
    <label>HRM Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Connex</fullName>
            </value>
            <value>
                <fullName>FDC</fullName>
            </value>
            <value>
                <fullName>General SFDC</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>