force-app/main/default/objects/NI_Documentation__c/fields/Implementation_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Instructions__c</fullName>
    <description>Implementation instructions for managed/unmanaged package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Implementation instructions for managed/unmanaged package</inlineHelpText>
    <label>Implementation Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>