force-app/main/default/objects/NI_Documentation__c/fields/Install_Type__c.field-meta.xml
<CustomField>
    <fullName>Install_Type__c</fullName>
    <description>Salesforce.com Change Request: NICC-007494

Primary install type</description>
    <inlineHelpText>Select the primary install type</inlineHelpText>
    <label>Install Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Installation</fullName>
            </value>
            <value>
                <fullName>Upgrade</fullName>
            </value>
            <value>
                <fullName>Peripheral Activation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Hosted Performance Monitoring</fullName>
            </value>
            <value>
                <fullName>MeetingMatrix</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>