force-app/main/default/objects/NI_Documentation__c/fields/Integration_Type__c.field-meta.xml
<CustomField>
    <fullName>Integration_Type__c</fullName>
    <description>Salesforce.com Change Request: NICC-007494

Select the type of Interface</description>
    <inlineHelpText>Select the type of Interface</inlineHelpText>
    <label>Integration Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Epitome</fullName>
            </value>
            <value>
                <fullName>EzRMS</fullName>
            </value>
            <value>
                <fullName>Galaxy</fullName>
            </value>
            <value>
                <fullName>HMS</fullName>
            </value>
            <value>
                <fullName>IDeaS</fullName>
            </value>
            <value>
                <fullName>IDPMS</fullName>
            </value>
            <value>
                <fullName>IQpms</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Micros OXI (Opera)</fullName>
            </value>
            <value>
                <fullName>ResortSuite</fullName>
            </value>
            <value>
                <fullName>Rover</fullName>
            </value>
            <value>
                <fullName>SIHOT</fullName>
            </value>
            <value>
                <fullName>SMS Host</fullName>
            </value>
            <value>
                <fullName>Visual One</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>