force-app/main/default/objects/NI_Documentation__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <description>Link to managed/unmanaged package</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Link to managed/unmanaged package</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>