force-app/main/default/objects/NI_Documentation__c/fields/Milestone__c.field-meta.xml
<CustomField>
    <fullName>Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce.com Change Request: NICC-007494
Related PSA Project Milestone</description>
    <inlineHelpText>Related PSA Project Milestone</inlineHelpText>
    <label>Milestone</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>pse__Milestone__c.pse__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>pse__Milestone__c</referenceTo>
    <relationshipLabel>NI Documentation</relationshipLabel>
    <relationshipName>NI_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>