force-app/main/default/objects/NI_Documentation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Opportunity</description>
    <inlineHelpText>Related Opportunity</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>NI_Related_Documentation</relationshipName>
    <type>Lookup</type>
</CustomField>